> Added page "Game Records" to show my game status. The design and function is still WIP
> Jaymantrix AI will start message if it's on the chat section instead of initialize website from the start
> Changed smooth entrance animation
> Can now search filter on the Game Record (No search result display coming soon...)
> min-height .content-wrapper is now 78vh

Jan 11, 2026
> Added loading screen at the start of opening the website
> Changed header logo and retweak design
> Adjust keyboard behavior on chat Jaymantrix AI on mobile
> Change dark blue theme scrollbar
> Added depth text with px measurement on the bottom left while scroll up and down
> Added black gradient below the screen if it's depth

Jan 12, 2026
> The website will perform initialization if the loading is done
> Fade out bottom black gradient when depth is below 50px
> Small changes on header and footer design and retweak some design
> Adjust .content-wrapper min-height from 78vh to 80vh
> Game list updated (Hyperdimension Neptunia Re;Birth1 img) and 1 unknown game got fixed
> Fixed fast-refresh vite
> Added function to prevent user from spamming sending message to Jaymantrix AI while thinking
> Changed Jaymantrix Logo

Jan 18, 2026
> Remove draggable img from "Game Record section" and redesign
> Supported on Netlify "https://jaymantrix-website.netlify.app/" while Vercel "https://jaymantrix-website.vercel.app/"

Jan 21. 2026
> Added hover settings icon for auto open and close settings panel
> Added function "Music Volume" slidebar on settings panel
> Fixed chat section not hide at initialization
> Added highlight effect on game section and game record section
> Try to adjust Jaymantrix AI first message

Jan 23, 2026
> "BrainAI.txt" is now deleted, and now it moves to the Firebase
> Added mini playlist for next music on settings panel
> Added left sidebar for easier navigation
> Added .content-wrapper moving animation when sidebar is moving
> Can save chat conversation when you restart or exit