@@ -1,0 +1,12 @@
+{
+  "my_games_website": [
+    {
+      "name": "My Gacha Article",
+      "link": "https://raw.githack.com/Dalmanski/My-article-2/main/index.html"
+    },
+    {
+      "name": "My Honkai Star Rail Pulls Simulator",
+      "link": "https://raw.githack.com/Dalmanski/Honkai-Star-Rail/main/Honkai%20Star%20Rail.html"
+    }
+  ]
+}
